# chinese-text-association

./: .env.example  .gitignore  CLAUDE.md  CUDA_TORCH_UV_NOTE.md  DESIGN.md  DIRECT_CONNECT.md  Dockerfile  MEMO.md  PLAN.md  README.md  main.py  pyproject.toml  setup_cuda_torch.sh
config/: user.env.example
graphrag_project/: .env.example  settings.yaml
graphrag_project/prompts/: community_report_graph.txt  extract_graph.txt  summarize_descriptions.txt
scripts/: cross_layer_example.py  local_workaround.py  rag_query_example.py  report_l1.py  report_l2.py  report_l3.py  test_nim.py
src/: build_directional_pmi.py  build_knn.py  build_pmi.py  embed_files.py  eval.py  fuse_graph.py  preprocess.py  sample_100.py
